# mlops_proyecto_atreides

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DOCKER-USAGE.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  EPIC-9-COMPLETE.md  INICIAR_APP.md  LICENSE  PR_DESCRIPTION.md  README.md  STRUCTURE.md  US-030-SUMMARY.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.streamlit.yml  docker-compose.yml  pyproject.toml  requirements-api-minimal.txt  requirements-api.txt  requirements.txt  setup_frontend.sh  test_dagster_load.py
.dvc/: config
.github/workflows/: deploy-cloudrun.yml  docker-build.yml  tests.yml
.streamlit/: config.toml
config/: .gitkeep  llm_config.yaml  monitoring_config.yaml
config/onnx/: catboost_export.yaml  chronos2_export.yaml  ensemble_export.yaml  lightgbm_export.yaml  xgboost_export.yaml
config/prompts/: system_prompt.txt
config/training/: catboost_config.yaml  chronos2_covariates_config.yaml  chronos2_finetuned_config.yaml  chronos2_zeroshot_config.yaml  ensemble_lightgbm_config.yaml  ensemble_ridge_config.yaml  lightgbm_config.yaml  xgboost_config.yaml
context/: PlaneacionProyecto.md  plan_context.md
dagster_home/: .gitignore  dagster.yaml
data/: .gitignore
data/processed/: steel_cleaned.parquet.dvc  steel_featured.parquet.dvc  steel_preprocessed_test.parquet.dvc  steel_preprocessed_train.parquet.dvc  steel_preprocessed_val.parquet.dvc
data/raw/: steel_energy_original.csv.dvc
docs/: DOCKER_SETUP.md  DVC_SETUP.md  README.md  SECRET_MANAGER_SETUP.md  SERVICE_ACCOUNT_SETUP.md  epic-9-testing-summary.md  epic-9-verification-checklist.md  model_versioning_guide.md  testing-guide.md  testing_e2e.md  testing_integration.md
docs/api/: API_DOCUMENTATION.md  EXAMPLES.md  QUICK_START.md  TROUBLESHOOTING.md
docs/guides/: CLOUD_RUN_DEPLOYMENT.md  DAGSTER_GUIDE.md
docs/us-pending/: us-015-advanced-models-ensemble.md
docs/us-planning/: us-013-plan.md  us-020.md  us-021-plan.md  us-021.md  us-022.md  us-025.md  us-027.md  us-028b.md  us-029.md  us-030.md  us-031.md
docs/us-resolved/: US-024.md  us-006.md  us-007.md  us-008.md  us-009.md  us-010.md  us-011.md  us-012.md  us-013.md  us-014.md  us-015.md  us-016.md  us-017.md  us-018.md  us-019.md  us-020.md  us-021.md  us-022.md  us-023.md  us-023b.md  us-025.md  us-027.md  us-028.md  us-028b.md  us-029.md  us-030.md  us-031.md
frontend/: README.md  app.py  docker_compose_streamlit (1).txt  dockerfile_streamlit (2).txt  quickstart_streamlit.txt  requirements.txt  setup_instructions.txt  streamlit_main (1).py  us_checklist.txt  verify_us_script.py
frontend/.streamlit/: config.toml
frontend/pages/: 01_🤖_Predicción.py  02_📈_Análisis.py
frontend/utils/: api_client.py
models/baselines/: xgboost_optimized.pkl.dvc
models/ensembles/: ensemble_lightgbm_v1.pkl.dvc  ensemble_lightgbm_v3.pkl.dvc  ensemble_ridge_v2.pkl.dvc
models/foundation/: chronos2_finetuned_results_20251029_144949.json  chronos2_results_20251029_150405.json
models/gradient_boosting/: catboost_model.pkl.dvc  lightgbm_model.pkl.dvc  xgboost_model.pkl.dvc
models/onnx/: README.md  catboost.onnx.dvc  lightgbm.onnx.dvc
models/preprocessing/: preprocessing_pipeline.pkl.dvc
models/trained/: catboost_metrics.yaml  catboost_pipeline.pkl.dvc  xgboost_metrics.yaml  xgboost_pipeline.pkl.dvc
notebooks/experimental/: api_usage_examples.ipynb  api_usage_examples_optimized.ipynb
notebooks/exploratory/: 00_data_analysis.ipynb  01_data_cleaning.ipynb  02_duckdb_exploration.ipynb  04_time_series_analysis.ipynb  05_feature_importance_analysis.ipynb  06_temporal_feature_engineering.ipynb  07_scaling_and_encoding.ipynb  08_xgboost_baseline.ipynb  09_chronos2_evaluation.ipynb  11_model_comparison 2.ipynb  11_model_comparison.ipynb  12_mlflow_model_comparison.ipynb  EDA_Erick.ipynb  README_EDA.md  eda_basic,_dante.ipynb  modelos_Julian.ipynb  modelos_Julian_comented.ipynb  modelos_Julian_original_data.ipynb  prueba_Arthur.ipynb
planeacion/: PlaneacionProyecto_editable.md
reports/: catboost_evaluation_test_v1.md  data_cleaning_log.json  data_cleaning_report.md  feature_engineering_log.json  feature_engineering_report.md  lightgbm_evaluation_test_-gbm_v1.md  model_comparison_report.md  ollama_benchmark_results.json  preprocessing_report.json  preprocessing_report.md  task_8_integration_validation_summary.md  us-010-final-validation-summary.md  verification_report.md  xgboost_evaluation_ejemplo.md  xgboost_evaluation_optimized.md  xgboost_evaluation_report.md
reports/figures/: test_comparison.json
reports/metrics/: catboost_test_metrics_test_v1.json  ensemble_metrics_lightgbm_v1.json  ensemble_metrics_lightgbm_v3.json  ensemble_metrics_ridge_test_v1.json  ensemble_metrics_ridge_v2.json  lightgbm_test_metrics_test_-gbm_v1.json  mutual_information_scores.csv  optuna_trials_catboost_test_v1.csv  optuna_trials_history.csv  optuna_trials_lightgbm_test_-gbm_v1.csv  optuna_trials_optimized.csv  pearson_correlations.csv  (+2 more)
scripts/: benchmark_ollama.py  benchmark_onnx_models.py  check-cloudrun-metrics.ps1  clear_gpu_memory.py  compare_models.py  create_chronos2_visualizations.py  deploy-to-cloudrun.ps1  deploy_streamlit_cloud.sh  deploy_streamlit_cloud_run.sh  docker_build.ps1  docker_build.sh  export_models_to_onnx.py  generate_drift_report.py  generate_reference_data.py  prepare_base_models.py  prepare_reference_data.py  remove_csv_from_git.ps1  remove_csv_from_git.sh  rollback-cloudrun.ps1  run_dagster_pipeline.py  run_e2e_tests.sh  run_training_pipeline.py  setup-gcp-infrastructure.ps1  setup_dvc_credentials.ps1  setup_dvc_credentials.sh  setup_secrets.py  simulate_drift.py  start-dagster.ps1  start-dagster.sh  start_api.sh  start_frontend.ps1  start_frontend.sh  test-cloudrun-latency.ps1  test_api.py  test_chronos2_covariates.py  test_chronos2_finetuning.py  test_chronos2_import.py  test_mlflow_connection.py  test_parquet_loading.py  validate_cleaning_quality.py  (+8 more)
src/api/: README.md  main.py  (+1 more)
tests/: test_clean_data.py  test_eda_plots.py  test_time_series.py
(+159 files in other folders)
